src/test/ui/issues/issue-49074.stderr
error[E0658]: The attribute `marco_use` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/issue-49074.rs:3:3
   |
LL | #[marco_use] // typo
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `macro_use`
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: cannot find macro `bar!` in this scope
  --> $DIR/issue-49074.rs:12:4
   |
LL |    bar!();
   |    ^^^
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
